# reflect-on-yourself

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/reflect-on-yourself/: field.hpp  json.hpp  type_info.hpp  util.hpp
include/reflect-on-yourself/json/: serializer.hpp
include/reflect-on-yourself/util/: contains_type.hpp  declaring_type_of_member_field_pointer.hpp  declaring_type_of_member_field_pointer_type.hpp  declaring_type_of_member_function_pointer.hpp  declaring_type_of_member_function_pointer_type.hpp  declaring_type_of_member_pointer.hpp  declaring_type_of_member_pointer_type.hpp  filter_missing_type.hpp  has_cvref.hpp  has_tag_type.hpp  has_tags.hpp  inplace_string.hpp  is_exact_type.hpp  is_field_pointer.hpp  is_field_pointer_type.hpp  is_function_pointer.hpp  is_function_pointer_type.hpp  is_member_field_pointer.hpp  is_member_field_pointer_of.hpp  is_member_field_pointer_type.hpp  is_member_field_pointer_type_of.hpp  is_member_function_pointer.hpp  is_member_function_pointer_of.hpp  is_member_function_pointer_type.hpp  is_member_function_pointer_type_of.hpp  is_member_pointer.hpp  is_member_pointer_type.hpp  nth_param_type_of_function_pointer.hpp  nth_param_type_of_function_pointer_type.hpp  nth_param_type_of_member_function_pointer.hpp  nth_param_type_of_member_function_pointer_type.hpp  nth_type_of.hpp  param_count_of_function_pointer.hpp  param_count_of_function_pointer_type.hpp  param_count_of_member_function_pointer.hpp  param_count_of_member_function_pointer_type.hpp  pointer_type_of_function_pointer.hpp  (+17 more)
src/: main.cpp
